--- a/contect.html
+++ b/contect.html
@@ -107,7 +107,7 @@
                             <h3> </h3>
                         </td>
                         <td>
-                            <input type="submit" value="Submit">
+                            <input type="submit" name="submit" value="Submit">
                         </td>
                     </tr>
             </form>
