เพิ่มข้อมูล home

--- a/home.html
+++ b/home.html
@@ -13,7 +13,8 @@
     <table style="width:100%">
         <tr>
             <th>
-                <h1 style="font-size:60px; color: rgb(4, 4, 51)">A<span style="font-size:60px; color: red">bout Me</span></h1>
+                <h1 style="font-size:60px; color: rgb(4, 4, 51)">A<span style="font-size:60px; color: red">bout
+                        Me</span></h1>
             </th>
         </tr>
     </table>
@@ -38,7 +39,8 @@
                 <td style=" padding: 25px">
                     <h2>THIPAPORN THAMONGKON</h2>
                     <h3>Student</h3>
-                    <h3 style="font-size:15px">Email :<a href="mailto:thipaporn5099@gmail.com">thipaporn5099@gmail.com</a>
+                    <h3 style="font-size:15px">Email :<a
+                            href="mailto:thipaporn5099@gmail.com">thipaporn5099@gmail.com</a>
                     </h3>
                     <h3 style="font-size:15px">+66 824805716</h3>
                 </td>
@@ -50,14 +52,80 @@
     </tr>
     <br>
     <tr>
-        <table width=70% align=center style=" border: 2px solid rgb(4, 4, 51); padding: 10px">
+        <table width=70% align=center
+            style=" border: 2px solid rgb(4, 4, 51); border-collapse: collapse; padding: 15px;">
             <tr>
+                <td colspan="2" style="text-align: center; background-color: rgb(235, 203, 203)">
+                    <h1>"<span style="font-size:60px; color: red">T</span>he best way to predict the <span
+                            style="color: red">F</span>uture is to invent <span style="color: red">IT</span>."</h1>
+                </td>
+            </tr>
+            <tr>
+                <td style="padding: 15px">
+                    <h2 style="text-align: left;"> Name</h2>
+                </td>
                 <td>
+                    <p>ทิพาพร ทามงคล</p>
+                </td>
+            </tr>
+            <tr>
+                <td style="padding: 15px">
+                    <h2 style="text-align: left;">Age</h2>
+                </td>
+                <td>
+                    <p>20</p>
+                </td>
+            </tr>
+            <tr>
+                <td style="padding: 15px">
+                    <h2 style="text-align: left;">Date of Birth</h2>
+                </td>
+                <td>
+                    <p>20 กรกฎาคม 2541</p>
+                </td>
+            </tr>
+            <tr>
+                    <td style="padding: 15px">
+                        <h2 style="text-align: left;">Blood</h2>
+                    </td>
+                    <td>
+                        <p>A</p>
+                    </td>
+                </tr>
+            <tr>
+                <td style="padding: 15px">
+                    <h2 style="text-align: left;">Nationality</h2>
+                </td>
+                <td>
+                    <p>ไทย</p>
+                </td>
+            </tr>
+            <tr>
+                <td style="padding: 15px">
+                    <h2 style="text-align: left;">Hobby</h2>
+                </td>
+                <td>
+                    <p>ดูหนัง   ฟังเพลง    เล่นกีต้าร์    เล่นเกมส์</p>
+                </td>
+            </tr>
+            <tr>
+                    <td style="padding: 15px">
+                        <h2 style="text-align: left;">My Favorite</h2>
+                    </td>
+                    <td>
+                        <p><span style="font-size:20px">Color : </span>สีฟ้า สีเขียว สีแดง</p>
+                        <p><span style="font-size:20px">Food : </span>ขนมจีนน้ำเงี้ยว แกงส้ม หมูกระเทียม</p>
+                        <p><span style="font-size:20px">Drink : </span>ชานมไข่มุก ชาเขียว นมสด</p>
+                    </td>
+                </tr>
+            <tr>
+                <td style="padding: 15px">
                     <h2 style="text-align: left;">Education</h2>
                 </td>
                 <td>
-                    <p>มัธยมต้น     :     โรงเรียนเขาชัยสน</p>
-                    <p>มัธยมปลาย    :     โรงเรียนป่าพะยอมพิทยาคม (โครงการ วมว.)</p>
+                    <p>มัธยมต้น : โรงเรียนเขาชัยสน</p>
+                    <p>มัธยมปลาย : โรงเรียนป่าพะยอมพิทยาคม (โครงการ วมว.)</p>
+                    <p>ปัจจุบัน : คณะวิศวกรรมศาสตร์ สาขาวิศวคอมพิวเตอร์ มหาวิทยาลัยเชียงใหม่</p>
                 </td>
             </tr>
         </table>
@@ -65,7 +133,8 @@
     </table>
 </body>
 <footer>
-    <p style=" text-align: center">Thipaporn Thamongkon - <a href="mailto:thipaporn5099@gmail.com">thipaporn5099@gmail.com</a>
+    <p style=" text-align: center">Thipaporn Thamongkon - <a
+            href="mailto:thipaporn5099@gmail.com">thipaporn5099@gmail.com</a>
         - (+66)824805716</p>
 </footer>
 
