--- a/contect.html
+++ b/contect.html
@@ -39,7 +39,7 @@
                     <td style=" padding: 25px">
                         <h2>THIPAPORN THAMONGKON</h2>
                         <h3>Student</h3>
-                        <h3 style="font-size:15px">Email :<a
+                        <h3 style="font-size:15px">E-mail :<a
                                 href="mailto:thipaporn5099@gmail.com">thipaporn5099@gmail.com</a>
                         </h3>
                         <h3 style="font-size:15px">+66 824805716</h3>
