--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
                 <td style=" padding: 25px">
                     <h2>THIPAPORN THAMONGKON</h2>
                     <h3>Student</h3>
-                    <h3 style="font-size:15px">Email :<a
+                    <h3 style="font-size:15px">E-mail :<a
                             href="mailto:thipaporn5099@gmail.com">thipaporn5099@gmail.com</a>
                     </h3>
                     <h3 style="font-size:15px">+66 824805716</h3>
@@ -53,7 +53,7 @@
     <br>
     <tr>
         <table width=70% align=center
-            style=" border: 2px solid rgb(4, 4, 51); border-collapse: collapse; padding: 15px;">
+            style=" border: 2px solid rgb(4, 4, 51); border-collapse: collapse">
             <tr>
                 <td colspan="2" style="text-align: center; background-color: rgb(235, 203, 203)">
                     <h1>"<span style="font-size:60px; color: red">T</span>he best way to predict the <span
@@ -68,6 +68,14 @@
                     <p>ทิพาพร ทามงคล</p>
                 </td>
             </tr>
+            <tr>
+                    <td style="padding: 15px">
+                        <h2 style="text-align: left;">Student code</h2>
+                    </td>
+                    <td>
+                        <p>600610734</p>
+                    </td>
+                </tr>
             <tr>
                 <td style="padding: 15px">
                     <h2 style="text-align: left;">Age</h2>
@@ -105,7 +113,7 @@
                     <h2 style="text-align: left;">Hobby</h2>
                 </td>
                 <td>
-                    <p>ดูหนัง   ฟังเพลง    เล่นกีต้าร์    เล่นเกมส์</p>
+                    <p>ดูหนัง ฟังเพลง เล่นกีต้าร์ เล่นเกมส์</p>
                 </td>
             </tr>
             <tr>
@@ -128,6 +136,14 @@
                     <p>ปัจจุบัน : คณะวิศวกรรมศาสตร์ สาขาวิศวคอมพิวเตอร์ มหาวิทยาลัยเชียงใหม่</p>
                 </td>
             </tr>
+            <tr>
+                    <td style="padding: 15px">
+                        <h2 style="text-align: left;">E-mail</h2>
+                    </td>
+                    <td>
+                        <p>thipaporn5099@gmail.com</p>
+                    </td>
+                </tr>
         </table>
     </tr>
     </table>
