--- a/home.html
+++ b/home.html
@@ -133,7 +133,7 @@
                 <td>
                     <p>มัธยมต้น : โรงเรียนเขาชัยสน</p>
                     <p>มัธยมปลาย : โรงเรียนป่าพะยอมพิทยาคม (โครงการ วมว.)</p>
-                    <p>ปัจจุบัน : คณะวิศวกรรมศาสตร์ สาขาวิศวคอมพิวเตอร์ มหาวิทยาลัยเชียงใหม่</p>
+                    <p>ปัจจุบัน : คณะวิศวกรรมศาสตร์ สาขาวิศวกรรมคอมพิวเตอร์ มหาวิทยาลัยเชียงใหม่</p>
                 </td>
             </tr>
             <tr>
