--- a/contect.html
+++ b/contect.html
@@ -91,7 +91,7 @@
                             <h3>Phone: </h3>
                         </td>
                         <td>
-                            <input type="text" name="phone" value=" ">
+                            <input type="text" name="phone" value=" " maxlength="10">
                         </td>
                     </tr>
                     <tr>
